@@ -1,4 +1,5 @@
 [master]
+    - Added save button to string edit dialog
     - Removes non-compact rank symbols in favor of compact rank
     - All duplicate whitespaces / tabs / newlines are now removed from non-multiline fields
     - Fixed a bug in the IEEEXploreFetcher
